# MultiModal_Agent_DARI

./: Dockerfile  README.md
dataAnalyst-agent/: README.md  env_example  pyproject.toml
dataAnalyst-agent/dataanalyst_agent/: agent.py  ingest.py  main.py  retriever.py
dataAnalyst-agent/dataanalyst_agent/qdrant_index/: docstore.json  index_store.json
dataAnalyst-agent/tests/: image_process.ipynb  react_agent.ipynb  test.ipynb
